[gd_scene load_steps=11 format=2]

[ext_resource path="res://Canine_White_Run.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33.262, 16.5 )

[node name="Enemy" type="Area2D"]
position = Vector2( 215, 126 )
scale = Vector2( 1.18754, 1 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 133.89, 3 )
scale = Vector2( 1.7946, 1.9842 )
frames = SubResource( 1 )
animation = "walk"
offset = Vector2( -35.9943, -15.4121 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 66.103, -16.5 )
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 69.0503, -16.5 )
scale = Vector2( 4.21039, 2.15 )

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Enemy_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
